4.4.9 -> 4.5:
    - jbj: convert rel to abs linkto dependency iff directory is known.
    - jbj: update sv.po (Translation Project).
    - mej: remove -pie flags passed from rpm.spec when configuring zlib build.
    - jbj: update known arch's.
    - jbj: preserve "Filemd5s" as the legacy rpmdb table name.
    - jbj: add --parentdirs & --linktos to change to opt-in behavior.
    - robert: backport minimum neon >= 0.27.0 support from HEAD.
    - jbj: backport macros.c from HEAD.
    - rpm.org: python: add method for expanding macros.
    - rpm.org: avoid truncating /var/log/rpmpkgs in case of errors (#232830).
    - jbj: update debugedit to include buildid changes.
    - jbj: update id.po (Translation Project).
    - jbj: prepare for open as a macro in bleeding edge glibc-2.6.90+.
    - jbj: python: backport signalsCaught, remove archscore.
    - jbj: re-add --force popt alias.
    - jbj: eliminate --initdb.
    - jbj: eliminate --rsegfault/--wsegfault.
    - jbj: add RPMTAG_DBINSTANCE header extension.
    - jbj: parameterize Depends index and dependency result caching.
    - jbj: adjust signal polling for python exit purposes <pmatlai@redhat.com>.
    - jbj: use _macro_BUFSIZ, not compiled in BUFSIZ, to size expansion targets.
    - jbj: enable %{dirname:...} macro primitive.
    - jbj: adopt rpm.org signal handling <pmatlai@redhat.com>.
    - jbj: fix a --import memory leak.
    - jbj: selinux: use matchpthcon() instead or rpmsx.
    - jbj: insure that RPMFILE_EXISTS is set for %config files.
    - jbj: fix ptr alignment problem seen on pld/sparc64.
    - jbj: re-add /usr/bin/rpmbuild for now, poptBT option wiring needs fixing.
    - jbj: pass -F fnum to patch (#243720).
    - jbj: refactor _free() from rpmlib.h -> rpmio.h.
    - jbj: add _rpmhome macro, revector helper paths through _rpmhome.
    - jbj: hack a version into magic install path. better needs to be done.
    - jbj: start consistent versionlibdir usage in all Makefile.am files.